@@ -1,3 +1,7 @@
+Webcamoid 9.2.3:
+
+- Only compress Android package with ads.
+
 Webcamoid 9.2.2:
 
 - Fixed Android packages upload.
